--- a/package.json
+++ b/package.json
@@ -10,11 +10,16 @@
   },
   "dependencies": {
     "@next/font": "13.2.3",
+    "@stripe/stripe-js": "^1.54.0",
+    "axios": "^1.4.0",
     "babel-plugin-styled-components": "^2.0.7",
-    "next": "13.2.3",
+    "next": "^13.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^4.9.0",
+    "recoil": "^0.7.7",
+    "stripe": "^12.8.0",
     "styled-components": "^5.3.9"
   }
 }
